product-management/src/main/java/com/example/error/ErrorCodes.java
package com.example.error;

public class ErrorCodes {

	private ErrorCodes() {
	}

	public static final String INTERNAL_SERVER_ERROR = "10001";
	public static final String PRODUCT_NOT_EXISTS_ERROR = "10002";
	public static final String RESOURCE_NOT_FOUND = "10003";
	public static final String AUTHORIZATION_ERROR = "10004";
}
